[tool.poetry]
name = "obraz"
version = "0.9"
description = "Static blog-aware site generator in Python mostly compatible with Jekyll"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://obraz.pirx.ru/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Jinja2 = "^3.1.1"
Markdown = "^3.3.6"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
types-PyYAML = "^6.0.5"
types-Markdown = "^3.3.12"
types-Jinja2 = "^2.11.9"
types-docopt = "^0.6.6"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[tool.poetry.scripts]
obraz = "obraz:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
